--- a/client/style.css
+++ b/client/style.css
@@ -11,7 +11,7 @@ body {
   background: #343541;
 }
 
-#app {
+.app {
   width: 100vw;
   height: 100vh;
   background: #343541;
@@ -22,7 +22,7 @@ body {
   justify-content: space-between;
 }
 
-#chat_container {
+.chat_container {
   flex: 1;
   width: 100%;
   height: 100%;
@@ -40,7 +40,7 @@ body {
 }
 
 /* hides scrollbar */
-#chat_container::-webkit-scrollbar {
+.chat_container::-webkit-scrollbar {
   display: none;
 }
 
@@ -112,10 +112,10 @@ body {
   display: none;
 }
 
-form {
+.chat_container-input {
   width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0 auto 12px;
   padding: 10px;
   background: #40414F;
 
@@ -124,7 +124,7 @@ form {
   gap: 10px;
 }
 
-textarea {
+.prompt {
   width: 100%;
 
   color: #fff;
@@ -137,7 +137,7 @@ textarea {
   outline: none;
 }
 
-button {
+.submit-btn {
   outline: 0;
   border: 0;
   cursor: pointer;
